statum-macros/tests/ui/invalid_validators_default_batch_disabled.stderr
error[E0599]: no method named `into_machines` found for struct `Vec<Row>` in the current scope
  --> tests/ui/invalid_validators_default_batch_disabled.rs:53:10
   |
52 |       let _ = vec![Row { status: "draft" }]
   |  _____________-
53 | |         .into_machines()
   | |_________-^^^^^^^^^^^^^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `IntoMachinesExt` defines an item `into_machines`, perhaps you need to implement it
  --> tests/ui/invalid_validators_default_batch_disabled.rs:19:1
   |
19 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
help: there is a method `into_iter` with a similar name
   |
53 -         .into_machines()
53 +         .into_iter()
   |

error[E0599]: no associated function or constant named `rebuild_many` found for struct `TaskMachine<TaskState>` in the current scope
  --> tests/ui/invalid_validators_default_batch_disabled.rs:57:52
   |
19 | #[machine]
   | ---------- associated function or constant `rebuild_many` not found for this struct
...
57 |     let _ = TaskMachine::<UninitializedTaskState>::rebuild_many(vec![Row { status: "done" }]);
   |                                                    ^^^^^^^^^^^^ associated function or constant not found in `TaskMachine`
   |
help: there is an associated function `rebuild` with a similar name
   |
57 -     let _ = TaskMachine::<UninitializedTaskState>::rebuild_many(vec![Row { status: "done" }]);
57 +     let _ = TaskMachine::<UninitializedTaskState>::rebuild(vec![Row { status: "done" }]);
   |
